<resources>
    <string name="app_name">PhrasesAppForFinalExam</string>
    <string name="created">Created by Ano Dzamelashvili and Goderdzi Valishvili</string>
    <string name="app_name2">Mellon Phrases</string>
    <string name="login">ავტორიზაცია</string>
    <string name="register">რეგისტრაცია</string>
    <string name="daregistrirdi">დარეგისტრირდი</string>
    <string name="are_you_new">ახალი ხარ?</string>
    <string name="goBack">უკან დაბრუნება</string>
    <string name="email">იმეილი</string>
    <string name="password">პაროლი</string>
    <string name="fullName">სრული სახელი</string>
    <string name="logout">გასვლა</string>
    <string name="day_month_year">დღე/თვე/წელი</string>
    <string name="text">text</string>
    <string name="menu">მენიუ</string>
    <string name="welcome">Welcome!</string>
    <string name="birthDate">თარიღი:</string>
    <string name="fullName2">სრული სახელი:</string>
    <string name="email2">იმეილი:</string>
    <string name="userInfo">ჩემი ინფორმაცია</string>
    <string name="LovePhrases">სასიყვარულო ფრაზები</string>
    <string name="MoviePhrases">ფრაზები კინო-ფილმებიდან</string>
    <string name="interestingPhrases">ბრძნული გამონათქვამები</string>
    <string name="close">დახურვა</string>
</resources>