<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:icon="@drawable/ic_menu">

    <item
        android:title="@string/menu"
        app:showAsAction="always"/>

      <item android:id="@+id/userInfoHeader"
        android:icon="@drawable/ic_userinfo"
        android:iconTint="@color/black"
        app:showAsAction="never"
        android:title="@string/userInfo"/>

      <item android:id="@+id/interPhrasesHeader"
        android:icon="@drawable/ic_interesting"
        app:showAsAction="never"
        android:title="@string/interestingPhrases"/>

      <item android:id="@+id/lovePhrasesHeader"
        android:icon="@drawable/ic_love"
        app:showAsAction="never"
        android:title="@string/LovePhrases"/>

      <item android:id="@+id/moviePhrasesHeader"
        android:icon="@drawable/ic_movies"
        app:showAsAction="never"
        android:title="@string/MoviePhrases"/>

</menu>